# contextual-discord

./: .gitignore  LICENSE  README.md  WARP.md  contextual_ai_gif_picker_discord_plugin_plan.md
backend/: .dockerignore  .gitignore  Dockerfile  README.md  config.py  debug_similarity.py  main.py  pyproject.toml
backend/data/: emotions.json  favorites.json
backend/models/: embeddings.py  emotion_classifier.pkl
backend/scripts/: train_classifier.py
backend/services/: tenor_api.py  vector_db.py
plugin/: README.md
plugin/src/userplugins/contextual/: index.tsx
